--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
+    "sonar": "command-to-run-sonar"
   },
   "engines": {
      "node": "6.9.1"
