--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,2 @@
-email=syammarolix@gmail.com
-#always-auth=true
+//registry=http://34.201.172.98:8081/repository/npm-repo/
 _auth=YWRtaW46YWRtaW5AMQ==
-allowRepublish=true
