--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+   "publishConfig": {
+    "registry": "http://34.201.172.98:8081/repository/npm-repository/"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sonar": "node sonar-project.js",
