--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-//registry=http://34.201.172.98:8081/repository/npm-proxy/
+registry=http://34.201.172.98:8081/repository/npm-proxy/
 _auth=YWRtaW46YWRtaW5AMQ==
 allowRepublish=true
