--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
-registry=http://34.201.172.98:8081/repository/npm-hosted/
+registry.npmjs.org/:_password = "admin@1"
+registry.npmjs.org/:username = "admin"
+registry = "http://34.201.172.98:8081/repository/npm-hosted/"
 _auth=YWRtaW46YWRtaW5AMQ==
 allowRepublish=true
