--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.4.1"
   },
+  "dependencies": {
+  "sonarqube-scanner": "file:/var/lib/jenkins/workspace/Hospital management/sonar-project.js"
+},
   "devDependencies": {
     "nodemon": "^1.11.0"
   },
