--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.4.1"
+    "dependencies": {
+    "bcryptjs": "^2.4.3",
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
