--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sonar": "sonar-scanner",
+    "sonar": "node sonar-project.js",
     "start": "node app.js"
   },
   "engines": {
@@ -35,8 +35,6 @@
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.4.1"
-    "dependencies": {
-    "bcryptjs": "^2.4.3",
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
