--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+   "publishConfig": {
+    "registry": "http://34.201.172.98:8081/repository/npm-hosted/"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
