--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "publishConfig" : {
-  "registry" : "http://34.201.172.98:8081/repository/npm-hosted/"
-  },  
+  "publishConfig": {
+    "registry": "http://34.201.172.98:8081/repository/npm-hosted/"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "sonar": "node sonar-project.js"
+    "start": "node app.js"
   },
   "engines": {
      "node": "6.9.1"
