--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
-34.201.172.98:8081/repository/npm-hosted/:_authToken = YWRtaW46YWRtaW5AMQ==
-registry.npmjs.org/:_password = "admin@1"
+13.125.226.33:8081/repository/npm-hosted/:_authToken = YWRtaW46YWRtaW5AMQ==
+registry.npmjs.org/:_password = "password"
 registry.npmjs.org/:username = "admin"
-#registry = "http://34.201.172.98:8081/repository/npm-hosted/"
+#registry = "http://13.125.226.33:8081/repository/npm-hosted/"
 _auth=YWRtaW46YWRtaW5AMQ==
 allowRepublish=true
