--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
-13.125.226.33:8081/repository/npm-hosted/:_authToken = YWRtaW46YWRtaW5AMQ==
+13.125.226.33:8081/repository/npm-hosted/:_authToken = YWRtaW46cGFzc3dvcmQ=
 registry.npmjs.org/:_password = "password"
 registry.npmjs.org/:username = "admin"
 #registry = "http://13.125.226.33:8081/repository/npm-hosted/"
-_auth=YWRtaW46YWRtaW5AMQ==
+-auth=YWRtaW46cGFzc3dvcmQ=
 allowRepublish=true
