--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
+    "sonar": "sonar-scanner"
   },
   "engines": {
      "node": "6.9.1"
@@ -33,6 +34,7 @@
     "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
+    "sonarqube-scanner": "^3.1.0",
     "nodemon": "^1.11.0"
   },
   "engines": {
