--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
-    "sonarqube-scanner": "^3.1.0",
+    "sonar-scanner": "^3.1.0",
     "nodemon": "^1.11.0"
   },
   "engines": {
