--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sonar-scanner": "^3.1.0"
   },
   "engines": {
     "node": "6.9.1"
