--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-13.125.226.33:8081/repository/npm-hosted/:_authToken = YWRtaW46cGFzc3dvcmQ=
-registry.npmjs.org/:_password = "password"
+13.38.6.193:8081/repository/Hospital-management/:_authToken = YWRtaW46cGFzc3dvcmQ=
+registry.npmjs.org/:_password = "admin"
 registry.npmjs.org/:username = "admin"
 #registry = "http://13.125.226.33:8081/repository/npm-hosted/"
 -auth=YWRtaW46cGFzc3dvcmQ=
